Added some required packages/modules.

--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 NewsBite, an RSS reader.
+
+Installation requirements:
+	PHP (tested with 5.2.5. Might work with earlier versions)
+	Curl PHP extension
+	SimpleXML PHP extension
